log
Fri May 13 15:17:22 UTC 2022: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:7: error: unused variable ‘numero’ [-Werror=unused-variable]
   int numero;
       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b8c97d
Fri May 13 15:17:31 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
0f0e903
Fri May 13 15:22:20 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
754b403
Fri May 13 15:28:33 UTC 2022: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
b826c87
Fri May 13 15:29:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
eadd1f9
